Fix spacing on the main layout of the deck editing scene.

--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,10 @@
 
 
 .deckScene {
+    padding: 10px;
+}
+
+.deckScene .cardArea {
     padding: 5px;
 }
 
